# a2a-communication-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_message_bus/: __init__.py  check_now.py  check_pending.py  circuit_breaker.py  metrics.py  notify_target.py  permissions.py  processor_check.py  schemas.py  webhook_handler.py
bridges/: bridge_engine.py  dev_bridge.py  general_bridge.py  research_bridge.py  study_bridge.py
docs/: ARCHITECTURE.md  SETUP.md  audit-report.md
marveen/: __init__.py  check_now.py  check_pending.py  circuit_breaker.py  metrics.py  notify_target.py  processor_check.py  schemas.py  webhook_handler.py
scripts/: agent_message_bus_auto_responder.py  agent_message_bus_check_messages.py  agent_message_bus_check_pending.py  agent_message_bus_cleanup.py  agent_message_bus_dream_engine.py  agent_message_bus_dream_engine_cron.sh  agent_message_bus_e2e_test.py  agent_message_bus_escalation.py  agent_message_bus_event_router.py  agent_message_bus_event_router_cron.sh  agent_message_bus_export.py  agent_message_bus_heartbeat.py  agent_message_bus_llm_bridge.py  agent_message_bus_llm_bridge_dev.py  agent_message_bus_llm_bridge_general.py  agent_message_bus_llm_bridge_research.py  agent_message_bus_llm_bridge_study.py  agent_message_bus_mcp_server.py  agent_message_bus_message_router.py  agent_message_bus_message_router.sh  agent_message_bus_processor.py  agent_message_bus_watchdog.py  amb_cli.py  amb_delegate.py  amb_migrations.py  amb_response.py  amb_retry.py  amb_runtime.py  amb_runtime_cleanup.py  amb_watchdog.py  bridge_engine.py  mmb.py  (+2 more)
(+9 files in other folders)
