[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "a2a-communication-protocol"
version = "1.0.0"
description = "Agent Message Bus — A2A communication protocol for Hermes Agent: pull-based inter-agent messaging with SQLite, MCP, and cron"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kriszmac4", email = "kriszmac4@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/kriszmac4/a2a-communication-protocol"
Repository = "https://github.com/kriszmac4/a2a-communication-protocol.git"

[project.scripts]
a2a-bus = "agent_message_bus:main"
